[package]
name = "idx-rs"
version = "0.9.5"
authors = ["Ceikry <ironceikry@gmail.com>"]
description = "A fast and efficient library for working with IDX-formatted RuneScape caches."
homepage = "https://github.com/ceikry/idx"
repository = "https://github.com/ceikry/idx"
keywords = ["idx", "runescape", "rs", "cache"]
license = "GPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4"
inflate = "0.4"
databuffer = "1"

[dev-dependencies]
lazy_static = "1.4.0"
criterion = "0.3"

[[bench]]
name = "lib"
harness = false

[lib]
name = "idx"