[package]
name = "idx-rs"
version = "0.10.0"
authors = ["Ceikry <ironceikry@gmail.com>"]
description = "A fast and efficient library for working with IDX-formatted RuneScape caches."
homepage = "https://github.com/ceikry/idx"
repository = "https://github.com/ceikry/idx"
keywords = ["idx", "runescape", "rs", "cache"]
license = "GPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4"
inflate = "0.4"
databuffer = "1"
crc32fast = "1.3.0"
tokio = {version = "1", optional = true}

[dev-dependencies]
lazy_static = "1.4.0"
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "lib"
harness = false

[lib]
name = "idx"

[features]
async = ["tokio"]